add enforce-first-as option
- fixes #208
